@@ -1,23 +1,23 @@
 To do:
 ------
 
+0) bug #1563667: impossible to flash TI 83+SE either with TiLP-I or II (see long mail)
+
 1) progress bars are not always updated (T. Evans)
 
-3) bug: broken pipe problem (T. Evans); see long mail about that
+2) bug: broken pipe problem (T. Evans); see long mail about that
 
-4) bug: impossible to flash TI 83+SE either with TiLP-I or II (see long mail)
+3) need to exit TiLP to clear a USB error
 
-5) need to exit TiLP to clear a USB error
+4) fix Titanium/USB sous Linux
 
-7) fix Titanium/USB sous Linux
-
-8) critical bug: sending LCHASE.8xp from 20sec.zip package failed on 
+5) critical bug: sending LCHASE.8xp from 20sec.zip package failed on 
 	TI84+ USB due to un-detokenization of varname (because tifiles2 don't 
 	know whether file is targetted for TI84+ or TI84+ USB).
 	Sending is OK, receiving is still KO because we should pass vartype 
 	with named lists.
 
-9) SilverLink cable is using more CPU than it should do under Windows => add 
+6) SilverLink cable is using more CPU than it should do under Windows => add 
 	a function in ticables2 which allow to use 2 methods (active polling 
 	w/ timeout, needed by TiEmu and timeout managed by OS).
 
